<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HireDetail"
    android:orientation="vertical">

    <TextView

        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="506dp"
        android:text="@string/bal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/adv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="457dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/bal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="505dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="454dp"
        android:text="@string/adv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/tot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="405dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/s_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="311dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/duraa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="358dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="404dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="313dp"
        android:text="@string/s_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/dur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="361dp"
        android:text="@string/dur"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF009688"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Hire Detail"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/topTxt"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>


    <TextView

        android:id="@+id/worker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="93dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="94dp"
        android:text="@string/wor"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <TextView

        android:id="@+id/customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="54dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="54dp"
        android:text="@string/cus"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="140dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="140dp"
        android:text="@string/Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:text="@string/hire"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="260dp"
        android:text="@string/wlocation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView

        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="259dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0B0B"
        android:textSize="17sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Edit"
        android:textColor="#218c79"
        android:textSize="12sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Cancal"
        android:textColor="#218c79"
        android:textSize="12sp"
        app:backgroundTint="@null" />


</RelativeLayout>